router/success/etc/network/iptables
# enp1s0f0 is WAN
# enp1s0f1 is LAN

*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]

# Traffic heading to internet WAN is hidden behind a masquerate, to make NAT work 
-A POSTROUTING -o enp1s0f0 -j MASQUERADE

COMMIT


####################


*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

### Service rules

# basic global accept rules - ICMP, loopback, traceroute, established all accepted
-A INPUT -s 127.0.0.0/8 -d 127.0.0.0/8 -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -m state --state ESTABLISHED -j ACCEPT

# enable traceroute rejections to get sent out
-A INPUT -p udp -m udp --dport 33434:33523 -j REJECT --reject-with icmp-port-unreachable

# DNS - accept from LAN
-A INPUT -i enp1s0f1 -p tcp --dport 53 -j ACCEPT
-A INPUT -i enp1s0f1 -p udp --dport 53 -j ACCEPT

# SSH - accept from LAN
-A INPUT -i enp1s0f1 -p tcp --dport 22 -j ACCEPT

# DHCP client requests - accept from LAN
-A INPUT -i enp1s0f1 -p udp --dport 67:68 -j ACCEPT

# Drop all other inbound traffic
-A INPUT -j DROP


### Forwarding rules

# forward packets along established/related connections
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# forward from LAN to WAN
-A FORWARD -i enp1s0f1 -o enp1s0f0 -j ACCEPT

# drop all other forwarded traffic
-A FORWARD -j DROP

COMMIT


####################
